--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-
+@import "./vars.css";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -8,4 +8,9 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  background-color: var(--color-bg);
+  color: var(--color-text);
 }
