--- a/src/pages/Privacy/Loader.module.css
+++ b/src/pages/Privacy/Loader.module.css
@@ -1,7 +1,8 @@
 @import "../../vars.css";
 
 .loader{
-
+    width: 100%;
+    height: 100vh;
     z-index: 10;
     position: fixed;
     top: 0;
@@ -13,8 +14,8 @@
 }
 
 .loader svg{
-    width: 290px;
-    height:  290px;
+    width: 220px;
+    height:  220px;
     display: flex;
     align-self: center;
     justify-content: center;
